fix(project-list): always show scrollbar
closes https://github.com/monterey-framework/monterey/issues/188

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -72,6 +72,10 @@
         background-color: transparent !important;
         border: 0 !important;
 
+        .vGrid-body {          
+          overflow: scroll !important;
+        }
+
         .vGrid-header {
           overflow-y: hidden !important;
 
